Fixes bread crumbs being overflowed

--- a/src/app/components/bread-crumbs/bread-crumbs.component.scss
+++ b/src/app/components/bread-crumbs/bread-crumbs.component.scss
@@ -21,4 +21,8 @@
       opacity: .5;
     }
   }
+
+  @media (max-width: 599px) {
+    grid-auto-flow: row;
+  }
 }
