--- a/src/app/components/character-details/character-details.component.scss
+++ b/src/app/components/character-details/character-details.component.scss
@@ -1,6 +1,7 @@
 .character-details {
   padding: 16px;
   font-size: 20px;
+  margin: 0 12px;
   background-color: #181818;
   border-radius: 16px;
   &__name {
