--- a/src/app/components/movie-details/movie-details.component.scss
+++ b/src/app/components/movie-details/movie-details.component.scss
@@ -32,7 +32,6 @@
 
   @media (max-width: 599px) {
     grid-template-columns: 100%;
-    margin: 0;
 
     &__image {
       width: 100%;
